Add native access args for JavaFX to suppress JDK 23/24 warnings