@@ -173,6 +173,8 @@ def jvmArgsWindows =
          '--add-modules=jdk.incubator.vector',   //Project Panama Vector API is still in incubator
          '--enable-preview', //Project Panama Vector API is still in incubator
          '--enable-native-access=ALL-UNNAMED', //Suppress unsafe warnings for FFM API Foreign Memory calls
+         '--enable-native-access=javafx.graphics', //Suppress unsafe warnings for native methods in this module
+         '--enable-native-access=javafx.web', //Suppress unsafe warnings for native methods in this module
          '-XX:+EnableDynamicAgentLoading',
          '-Xmx6g',                         //Set max heap size to 6GB
          '-Dnet.bytebuddy.experimental=true', // Allow Mockito/ByteBuddy on Java 23
@@ -195,6 +197,7 @@ def jvmArgsLinux =
 
          // '-XX:+UseCompactObjectHeaders',   //JDK25 - use compact object headers
          '--enable-native-access=javafx.graphics', //JDK24 - suppress restricted java.lang.System calls
+         '--enable-native-access=javafx.web', //Suppress unsafe warnings for native methods in this module
          '--enable-native-access=ALL-UNNAMED', //SDRPlay API library path
          '-Xmx6g',                         //Set max heap size to 6GB
          '-Dnet.bytebuddy.experimental=true', // Allow Mockito/ByteBuddy on Java 23
